--- a/inde.html
+++ b/inde.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>兼善中学龙凤校区</title>
     <!-- 网站图标 -->
-    <link rel="icon" href="1766489746822.png" type="image/png" sizes="16x16">
-    <link rel="icon" href="1766489746822.png" type="image/png" sizes="32x32">
-    <link rel="icon" href="1766489746822.png" type="image/png" sizes="48x48">
-    <link rel="icon" href="1766489746822.png" type="image/png" sizes="64x64">
+    <link rel="icon" href="mmexport1766489468499_edit_339491669146742.png" type="image/png" sizes="16x16">
+    <link rel="icon" href="mmexport1766489468499_edit_339491669146742.png" type="image/png" sizes="32x32">
+    <link rel="icon" href="mmexport1766489468499_edit_339491669146742.png" type="image/png" sizes="48x48">
+    <link rel="icon" href="mmexport1766489468499_edit_339491669146742.png" type="image/png" sizes="64x64">
     <!-- Apple设备图标 -->
     <link rel="apple-touch-icon" href="1766489746822.png" sizes="180x180">
     <link rel="apple-touch-icon-precomposed" href="1766489746822.png" sizes="180x180">
@@ -20,7 +20,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- 预加载关键资源 -->
     <link rel="preload" href="1766489746822.png" as="image" type="image/png">
-    <link rel="preload" href="b3a5f2616624fa00fd65d52a299512a0.webp" as="image" type="image/webp">
+    <link rel="preload" href="mmexport1766489468499_edit_339491669146742.png" as="image" type="image/png">
+    <link rel="preload" href="96d07142865ce29cbf5b085b488acdf7.jpg" as="image" type="image/jpg">
     <link rel="preload" href="8e3bdb8706d6e01844e8a1412a40ecb7.webp" as="image" type="image/webp">
     <link rel="preload" href="facf8d1f-9403-4cdc-9126-13a997c7c3a7.webp" as="image" type="image/webp">
     <link rel="preload" href="94401de90ac8618d64e47a36143a0aed.webp" as="image" type="image/webp">
@@ -189,10 +190,10 @@
             transform: scale(1.1);
         }
 
-        /* 英雄区域（保持背景清晰，移除内容区液态玻璃） */
+        /* 英雄区域 */
         .hero {
             min-height: 100vh;
-            background: url('b3a5f2616624fa00fd65d52a299512a0.webp') center/cover fixed;
+            background: url('96d07142865ce29cbf5b085b488acdf7.jpg') center/cover fixed;
             display: flex;
             align-items: center;
             justify-content: center;
