--- a/inde.html
+++ b/inde.html
@@ -19,6 +19,8 @@
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- 预加载关键资源 -->
+    <link rel="preload" href="微信图片_2025-12-29_094910_981.jpg" as="image" type="image/jpg">
+    <link rel="preload" href="qrcode_1766972978412.jpg" as="image" type="image/jpg">
     <link rel="preload" href="1766489746822.png" as="image" type="image/png">
     <link rel="preload" href="mmexport1766489468499_edit_339491669146742.png" as="image" type="image/png">
     <link rel="preload" href="96d07142865ce29cbf5b085b488acdf7.jpg" as="image" type="image/jpg">
@@ -1087,8 +1089,8 @@
                     </div>
                     <p>重庆市兼善中学龙凤校区-培育未来领袖的摇篮</p>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-weixin"></i></a>
-                        <a href="#"><i class="fab fa-qq"></i></a>
+                        <a href="微信图片_2025-12-29_094910_981.jpg"><i class="fab fa-weixin"></i></a>
+                        <a href="qrcode_1766972978412.jpg"><i class="fab fa-qq"></i></a>
                         <a href="#"><i class="fab fa-weibo"></i></a>
                     </div>
                 </div>
